docs(toko): add swagger toko api documentation
